@@ -7,6 +7,7 @@ internal class WelcomeProcessor : MessageProcessor {
 
     override val commands = arrayOf("001")
 
-    override fun process(message: IrcMessage) = listOf(ServerWelcome(message.time, String(message.params[0])))
+    override fun process(message: IrcMessage) = listOf(ServerWelcome(message.time, message.serverName(), String(message.params[0])))
 
+    private fun IrcMessage.serverName() = prefix?.let { String(it) } ?: ""
 }
