@@ -24,12 +24,13 @@ internal class WelcomeProcessorTest {
 
     @Test
     fun `WelcomeProcessor returns server welcome event`() {
-        val events = processor.process(IrcMessage(emptyMap(), ":thegibson.com".toByteArray(), "001", listOf(
+        val events = processor.process(IrcMessage(emptyMap(), "thegibson.com".toByteArray(), "001", listOf(
                 "acidBurn".toByteArray(),
                 "Welcome to the Internet Relay Network, acidBurn!burn@hacktheplanet.com".toByteArray())))
         assertEquals(1, events.size)
         assertEquals(TestConstants.time, events[0].time)
         assertEquals("acidBurn", events[0].localNick)
+        assertEquals("thegibson.com", events[0].server)
     }
 
 }
